--- a/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sm6150.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sm6150.rc
@@ -17,6 +17,11 @@ on boot
     chown system system /sys/bus/platform/devices/soc:fingerprint_fpc/request_vreg
     chown system system /sys/bus/platform/devices/soc:fingerprint_fpc/power_cfg
 
+    chown system system /sys/bus/platform/devices/soc/soc:fpc1020/fingerdown_wait
+    chown system system /sys/bus/platform/devices/soc/soc:fpc1020/irq
+    chown system system /sys/bus/platform/devices/soc/soc:fpc1020/hw_reset
+    chown system system /sys/bus/platform/devices/soc/soc:fpc1020/wakeup_enable
+
 on post-fs-data
     mkdir /data/vendor/fpc 0770 system system
     mkdir /data/vendor/fpdump 0770 system system
