--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -105,6 +105,9 @@ on property:sys.boot_completed=1
     write /sys/block/sde/queue/nr_requests 128
     write /sys/block/sde/queue/iostats 1
 
+    # Enable EAS
+    write /proc/sys/kernel/sched_energy_aware 1
+
 service vendor.pd_mapper /vendor/bin/pd-mapper
     class core
     user system
